[package]
name = "context"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["common","example", "macros"]

[workspace.dependencies]
protos = { git = "http://gitlab.kgs.asia/rust_lib/protos.git", branch = "feature/payment_rollover" }
kgs-tracing = { git = "http://gitlab.kgs.asia/rust_lib/kgs-tracing.git", branch = "master" }
kgs-err = { git = "http://gitlab.kgs.asia/rust_lib/kgs-err.git", branch = "feature/payment_rollover" }
database-manager = { git = "http://gitlab.kgs.asia/rust_lib/database-manager.git", branch = "master" }
tokio = { version = "1.39.3", features = ["rt-multi-thread", "macros"] }
tonic = "0.11.0"
pretty_assertions = "1.4.0"
pin-project-lite = "0.2.11"
futures-core = "0.3.30"
futures-sink = "0.3.30"
async-trait = "0.1.81"
thread_local = "1.1.8"
tower = "0.5.0"
futures = "0.3.30"
once_cell = "1.19.0"

common = { path = "./common" }
macros = { path = "./macros" }
