[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = {workspace = true }
tonic = {workspace = true }
pin-project-lite = {workspace = true }
futures-core = {workspace = true }
futures-sink = {workspace = true }
async-trait = {workspace = true }
thread_local = {workspace = true }

# For tonic middleware
tower = {workspace = true }
futures = {workspace = true }
once_cell = {workspace = true }

# For db_impl
sea-orm = {workspace = true}
log = {workspace = true}
deadpool-redis = {workspace = true}
redis = {workspace = true}



