[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
prost = "0.13.1"
prost-types = "0.13.1"
tonic = "0.12.1"
prost-wkt = "0.6"
serde_json = "1.0"

[build-dependencies]
tonic-build = "0.12.1"
prost-build = "0.13.1"
glob = "0.3.1"