[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
prost = "0.12.3"
prost-types = "0.12.3"
tonic = "0.11.0"
prost-wkt = "0.5"
serde_json = "1.0"

[build-dependencies]
tonic-build = "0.11.0"
prost-build = "0.12.3"
glob = "0.3.1"